Bump quarkus to 3.19.1 (#14)
* Bump quarkus to 3.19.1

* Fix GenericData.Array to PrimitivesArrays

* Fix producing tombstones

* Updating container image group